# OOP4

./: .gitignore  CMakeLists.txt
include/: Figure.h  Point.h  Polygon.h  Rectangle.h  Square.h  Trapezoid.h
src/: main.cpp
tests/: tests_geometry.cpp
